add chat fiture in match
